[FIX] - overflow to smatphones on about section

--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -1,3 +1,7 @@
 .container {
     height: 650px;
 }
+
+.about {
+    overflow: auto;
+}
